# opal-sim

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  sh-black-formatter.sh
.githooks/: pre-commit
configs/: defaults.json  hf.json
model-configs/granite-3.3-8b-instruct/: config.json
opal/: autoscaling.py  datatypes.py  environment.py  events.py  gpu_model.py  io_model.py  kvbm.py  kvc_manager.py  llm_model.py  main.py  opal.py  opal_base.py  opal_config.py  opal_logging.py  opal_profile.py  opal_registery.py  plot.py  request.py  router.py  stage_statistics.py  util.py  vllm_worker.py  workload_orchestrator.py
opal/regression-fitting/: README.md  offline_calc_a_b.py  online_calibration.py
opal/workloads/: abstract_workload.py  sc25_blog.py  workload.py
tests/: test_configs.py
traces/: hello.jsonl
wiki/: Config-Usage-Tracking.md  Configuration-Simulation.md  Examples.md  Home.md  Install-Requirements.md  KVCache-manager.md  Overview.md  README.md  Router.md  Running-Workloads.md  Running.md  Worker.md  Workload-generation.md  _Sidebar.md  vLLM-modeling.md  vllm-worker.md
