[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opal-sim"
version = "0.1.0"
description = "A Discrete-event based LLM Inference Platform Simulator in Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "IBM Research" }
]
dependencies = [
    "numpy>=2.2",
    "matplotlib>=3.10",
    "simpy>=4.1",
    "tqdm",
    "pytest>=9.0",
    "black>=25.0",
    "transformers>=4.55.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "black>=25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["opal"]

[tool.black]
line-length = 120
target-version = ["py311"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "black>=25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
